--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "dir": "/home/viren/work/DATA/Spectral_Analysis",
-  "region": "G025.0-5.0",
-  "image": "/home/viren/work/DATA/Spectral_Analysis/G025.0-5.0/G025.0-5.0.FITS",
+  "dir": "/home/viren/work/DATA/variability/New_variability/simulated_Images",
+  "region": "G033.0-5.0",
+  "image": "/home/viren/work/DATA/variability/New_variability/simulated_Images/G033.0-5.0/G033.0-5.0_mod1.FITS",
   "spidx": "/home/viren/work/DATA/Spectral_Analysis/G031.0-5.0/spidxcat_v1.1b.fits",
   "tgss": "/home/viren/work/DATA/Spectral_Analysis/G031.0-5.0/TGSSADR1_7sigma_catalog.tsv",
   "show_matches": true,
